k8s/ingress_resourses/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: default
spec:
  tls:
    - hosts:
        - jihadgrafana.devops-int-college.com
      secretName: grafana-tls
  rules:
    - host: jihadgrafana.devops-int-college.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 443
