k8s/ingress_resourses/telegram-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telegram-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
spec:
  tls:
    - hosts:
        - polybotjihad.devops-int-college.com
      secretName: tls-secret
  rules:
    - host: polybotjihad.devops-int-college.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev_polybot-service
                port:
                  number: 8443
